@startuml

Nota "2"--"1" Intervalo 
Triade "1" -- "2" Intervalo

class Nota {
    Nota(); 
    Nota(int, int, int ); 
    void setOitava(int);
    void setGrau(int);
    void setAcidente(int);
    int getOitava();
    int getGrau();
    int getAcidente();
    void setNota( int, int, int ); 
    void RandomizarNota();
    Nota qualRelativa(int);
    string GerarDescricao();
    void ImprimirEmTela();
    int oitava;     // 0--8 
    int grau;       // 1--7 
    int acidente;   // [-2,0,2] [bb,b,0,#,*]
}

class Intervalo {
    Intervalo();
    Intervalo(Nota);
    Intervalo(Nota,Nota);
    void setN1(Nota);
    void setN2(Nota);
    void setN2(string);
    void setN2();
    void setQtdNotasNaturais(int);
    void setQtdSemiTons(int);
    Nota getN1();
    Nota getN2();
    int  getQtdNotasNaturais();
    int  GetQtdSemiTons();
    void SetIntervalo(Nota,Nota);
    void CalcularAtributosSecundarios();
    void RandomizarSegundaNota();
    string RandomizarDescricao();
    string GerarDescricao();
    void ImprimirEmTela();
    Nota n1;
    Nota n2;
    int qtdNotasNaturais; //[2-7]
    int qtdSemiTons;     //[2-12]
    int orientacao; //[-1 desc, 1 asc]
}

class Triade{
    Triade();
    Triade(Intervalo);
    Triade(Intervalo, Intervalo);
    void setInt1(Intervalo);
    Intervalo getInt1();
    void setInt2(Intervalo);
    Intervalo getInt2();
    Nota getFundamental();
    Nota getTerca();
    Nota getQuinta();
    void ImprimirEmTela();
    void ImprimirFundamentalEmTela();
    string GerarDescricao();
    string RandomizarTipoTriade();
    void RandomizarTriade();
    Intervalo i1;
    Intervalo i2;
}

@enduml
